pytorch tagger replaces theano tagger; docker image is simplified
